<resources>
    <string name="version_number">101.1</string>
    <string name="app_name">GameGuardian</string>
    <string name="app_short_name_hw">Game (HW)</string>
    <string name="app_short_name_sw">Game (SW)</string>
    <string name="sdcard">/sdcard</string>
    <string name="s">%s</string>
    <string name="d">%,d</string>
    <string name="type_byte">Byte</string>
    <string name="type_word">Word</string>
    <string name="type_dword">Dword</string>
    <string name="type_xor">Xor</string>
    <string name="type_float">Float</string>
    <string name="type_qword">Qword</string>
    <string name="type_double">Double</string>
    <string name="type_auto">Auto</string>
    <string name="type_byte_short">B</string>
    <string name="type_word_short">W</string>
    <string name="type_dword_short">D</string>
    <string name="type_xor_short">X</string>
    <string name="type_float_short">F</string>
    <string name="type_qword_short">Q</string>
    <string name="type_double_short">E</string>
    <string name="type_auto_short">A</string>
    <string name="btn_hex">HEX</string>
    <string name="colon">:</string>
    <string name="semicolon">;</string>
    <string name="hex">h</string>
    <string name="rhex">r</string>
    <string name="hex_example">BAAD</string>
    <string name="yes_slow">__yes__ (__slow__)</string>
    <string name="no_slow">__no__ (__slow__)</string>
    <string name="help_front">__quick_start_title__\n\n__help_basics__\n\n__help_floating_icon__\n\n__help_exact_search__\n\n__help_group_search__\n\n__help_range_search__\n\n__help_encrypted_search__\n\n__help_fuzzy_search__\n\n__help_mask_search__\n\n__help_fill__\n\n__help_text_search__\n\n__help_xor_search__\n\n__help_speedhack__\n\n__help_others__  \n\n__help_typical_usage__\n\n__help_speed_up__\n\n__help_hints_0__\n\n__help_hex_colors__\n\n__rtfm__\n</string>
    <string name="speedhack_speeds_">__speedhack_speeds__:</string>
    <string name="language_">__language__ (Language)</string>
    <string name="improve_translation_en">This translation was created by an automatic translator. You can improve it by using our collective translation service.</string>
    <string name="improve_translation_">__improve_translation_en__\n\n__improve_translation__</string>
    <string name="improve_translation_hint">__improve_translation_en__\nhttp://gameguardian.net/forum/topic/7544-if-you-want-to-add-a-new-translation-or-improve-an-existing-one/</string>
    <string name="tilde">~</string>
    <string name="not_equal">≠</string>
    <string name="examples_search">\n__help_exact_search_title__:\n\t-340\n\n__help_xor_search_title__:\n\t-340__mode_xor__16\n\n__help_range_search_title__: \n\t298__tilde__764\n\n__help_xor_search_title__ + __help_range_search_title__: \n\t298__tilde__764__mode_xor__32\n\n__help_group_search_title__: \n\t895__semicolon__438__semicolon__-83__colon__300\n\t895D__semicolon__438F__semicolon__-83B__colon__300\n\t800__tilde__900__semicolon__438__semicolon__-90__tilde__-60__colon__300\n\t800D__tilde__900D__semicolon__438E__semicolon__-90B__tilde__-60B__colon__300\n\t800__tilde____tilde__900__semicolon__438__semicolon__-90__tilde__-60__colon__300\n\t800D__tilde__900D__semicolon__438E__semicolon__-90B__tilde____tilde__-60B__colon__300\n\n__ordered_group_search__: \n\t895__semicolon__438__semicolon__-83__colon____colon__300\n\t895D__semicolon__438F__semicolon__-83B__colon____colon__300\n\t800__tilde__900__semicolon__438__semicolon__-90__tilde__-60__colon____colon__300\n\t800D__tilde__900D__semicolon__438E__semicolon__-90B__tilde__-60B__colon____colon__300\n\t800__tilde__900__semicolon__438__semicolon__-90__tilde____tilde__-60__colon____colon__300\n\t800D__tilde____tilde__900D__semicolon__438E__semicolon__-90B__tilde__-60B__colon____colon__300\n\t123__semicolon____any____semicolon__456__colon____colon__9\n\n\t\t__any__ = __any_value__\n\n__format_hex__: \n\tBAFE56DE__hex__\n\n__format_rhex__: \n\tDE56FEBA__rhex__\n__text_examples__\n\n__rtfm__\n</string>
    <string name="examples_timejump">\n\"42345678\" = 1 __unit_years_short__ 125 __unit_days_short__ 2 __unit_hours_short__ 41 __unit_minutes_short__ 18 __unit_seconds_short__\n\"1:125:2:41:18\" = 1 __unit_years_short__ 125 __unit_days_short__ 2 __unit_hours_short__ 41 __unit_minutes_short__ 18 __unit_seconds_short__\n\"5:13\" = 5 __unit_minutes_short__ 13 __unit_seconds_short__\n\"7:3:1\" = 7 __unit_hours_short__ 3 __unit_minutes_short__ 1 __unit_seconds_short__\n\"3600\" = 1 __unit_hours_short__\n\"2:15:54:32\" = 2 __unit_days_short__ 15 __unit_hours_short__ 54 __unit_minutes_short__ 32 __unit_seconds_short__\n\"3600.15\" = 1 __unit_hours_short__ 0.15 __unit_seconds_short__\n\"7:3:1.519\" = 7 __unit_hours_short__ 3 __unit_minutes_short__ 1.519 __unit_seconds_short__\n\n__rtfm__\n</string>
    <string name="speedhack_speeds">__speedhack__: __speeds__</string>
    <string name="speedhack_intercept">__speedhack__: __intercept__</string>
    <string name="speedhack_functions">__speedhack__: __functions__</string>
    <string name="load_0">__load_items__; __load_values__; __load_freeze__;</string>
    <string name="load_1">__load_items__; __load_values__;</string>
    <string name="load_2">__load_items__;</string>
    <string name="empty" />
    <string name="reset_on_exit_">__speedhack__, __unrandomizer__: __reset_on_exit__</string>
    <string name="kill_game_info_">__kill_game_info__\n\n__continue_ask__</string>
    <string name="help_faq">\n* __help_faq_title__:\n\n     1. __help_faq_1_q__\n        __help_faq_1_a__\n\n     2. __help_faq_2_q__\n        __help_faq_2_a__\n\n     3. __help_faq_3_q__\n        __help_faq_3_a__\n\n     4. __help_faq_4_q__\n        __help_faq_4_a__\n\n     5. __help_faq_5_q__\n        __help_faq_5_a__\n\n     6. __help_faq_6_q__\n        __help_faq_6_a__\n\n     7. __help_faq_7_q__\n        __help_faq_7_a__\n\n     8. __help_faq_8_q__\n        __help_faq_8_a__\n\n     9. __help_faq_9_q__\n        __help_faq_9_a__\n\n     10. __help_faq_10_q__\n        __help_faq_10_a__\n\n     11. __help_faq_11_q__\n        __help_faq_11_a__\n\n     12. __help_faq_12_q__\n        __help_faq_12_a__\n\n     13. __help_faq_13_q__\n        __help_faq_13_a__\n\n     14. __help_faq_14_q__\n        __help_faq_14_a__\n\n     15. __help_faq_15_q__\n        __help_faq_15_a__\n\n     16. __help_faq_16_q__\n        __help_faq_16_a__\n\n     17. __help_faq_17_q__\n        __help_faq_17_a__\n\n     18. __help_faq_18_q__\n        __help_faq_18_a__\n\n     19. __help_faq_19_q__\n        __help_faq_19_a__\n\n     20. __help_faq_20_q__\n        __help_faq_20_a__\n\n     21. __help_faq_21_q__\n        __help_faq_21_a__\n\n     22. __help_faq_22_q__\n        __help_faq_22_a__\n\n     23. __help_faq_23_q__\n        __help_faq_23_a__\n\n     24. __help_faq_24_q__\n        __help_faq_24_a__\n\n     25. __help_faq_25_q__\n        __help_faq_25_a__\n\n     26. __help_faq_26_q__\n        __help_faq_26_a__\n\n     27. __help_faq_27_q__\n        __help_faq_27_a__\n\n     28. __help_faq_28_q__\n        __help_faq_28_a__\n\n     29. __help_faq_29_q__\n        __help_faq_29_a__\n     \n     30. __help_faq_30_q__\n        __help_faq_30_a__\n        \n     31. __help_faq_31_q__\n        __help_faq_31_a__\n\n     32. __help_faq_32_q__\n        __help_faq_32_b__\n        \n     33. __help_faq_33_q__\n        __help_faq_33_a__\n</string>
    <string name="pkg">__pkg_1____pkg_2__</string>
    <string name="pkg_1">catch_.me_.</string>
    <string name="pkg_2">if_.you_.can_</string>
    <string name="percent">%</string>
    <string name="sdcard_file">/sdcard/1.txt</string>
    <string name="mask_examples">\n__address__ = A20\n__mask__ FFFFFFFF\n\n__address__ != B20\n__mask__ FF0\n\n__address__ = 0B?0\n__mask__ FFF\n\n__address__ != ??F??\n__mask__ BA0\n\n__rtfm__\n</string>
    <string name="question">?</string>
    <string name="mask_example">\n        __address__ 12__question__\n        __mask__ FFF\n\n        __address__ 123\n        __mask__ FF0\n\n        __address__ 127\n        __mask__ FFF0\n\n        __address__ 129\n        __mask__ BFF0\n\n        __address__ 0121\n        __mask__ 0FF0\n</string>
    <string name="help_hints_0">__help_hints__\n\t__help_hint_1__\n</string>
    <string name="forum">http://gameguardian.net/forum</string>
    <string name="mode_xor">X</string>
    <string name="edit_all_examples">\n\t12345\n\t12BA0h\n\t12BA0r\n\t12;34;56;78;90\n\n__help_xor_search_title__:\n\t12345X4\n\t12345X-4\n\t12BA0hX4\n\t12BA0hX-4\n\t12BA0rX4\n\t12BA0rX-4\n\t12;34;56;78;90X4\n\t12;34;56;78;90X-4\n__text_examples__\n\n__rtfm__\n</string>
    <string name="edit_examples">\n\t12345\n\t12BA0h\n\t12BA0r\n\n__help_xor_search_title__:\n\t12345X4\n\t12345X-4\n\t12BA0hX4\n\t12BA0hX-4\n\t12BA0rX4\n\t12BA0rX-4\n__text_examples__\n\n__rtfm__\n</string>
    <string name="diff_examples">\n123\n123__tilde__456\n123__tilde____tilde__456\n\n__rtfm__\n</string>
    <string name="keyboard_external">__keyboard__ __external__</string>
    <string name="memory_filter_examples">\n123\n1?3\n1*3\n^123\n^1?3\n^1*3\n123$\n1?3$\n1*3$\n^123$\n^1?3$\n^1*3$\ntext\n\n__rtfm__\n</string>
    <string name="asterisk">*</string>
    <string name="caret">^</string>
    <string name="dollar">$</string>
    <string name="empty_zygote_memory">__empty_memory__; Zygote</string>
    <string name="restart_game_without_protection">__restart_game__ (__without_protection__)</string>
    <string name="unrandomizer_functions">__unrandomizer__: __functions__</string>
    <string name="type_qword_">__type_qword__:</string>
    <string name="type_double_">__type_double__:</string>
    <string name="unrandomizer_intercept">__unrandomizer__: __intercept__</string>
    <string name="fractional">{x}</string>
    <string name="fractional_hint_">__fractional_hint__\nx = 123__decimal__456; {x} = 0__decimal__456\nx = -123__decimal__456; {x} = -0__decimal__456</string>
    <string name="decimal">.</string>
    <string name="thousands">,</string>
    <string name="i">\"i\"</string>
    <string name="waitpid">waitpid</string>
    <string name="freeze_interval_help_">__freeze_interval_help__\n\n__small_is_bad__</string>
    <string name="saved_list_update_interval_help_">__saved_list_update_interval_help__\n\n__small_is_bad__</string>
    <string name="logcat">Logcat</string>
    <string name="vspace_list">Parallel Space, VirtualXposed, Parallel Space Lite, GO multiple, 2Face</string>
    <string name="selinux">SeLinux</string>
    <string name="nox">Nox App Player</string>
    <string name="bluestacks">Bluestacks</string>
    <string name="fast_emulators">:\n\t* Nox - https://www.bignox.com/\n\t* Memu - http://www.memuplay.com/\n\t* LDPlayer - http://en.ldmnq.com\n\t* KoPlayer - http://www.koplayer.com/\n\t* Droid4X - http://droid4x.haimawan.com/</string>
    <string name="maps">/proc/pid/maps</string>
    <string name="max_group">64</string>
    <string name="context">Context:</string>
    <string name="instrumentation">Instrumentation</string>
    <string name="service">Service</string>
    <string name="create">Create</string>
    <string name="application">Application</string>
    <string name="activity">Activity</string>
    <string name="level_1">__level__ 1</string>
    <string name="level_2">__level__ 2</string>
    <string name="level_3">__level__ 3</string>
    <string name="address">Address:</string>
    <string name="filter">Filter</string>
    <string name="type_edit_limit">Input value from __s__ to __s__</string>
    <string name="milliseconds_short">ms</string>
    <string name="default_">Default:</string>
    <string name="starts">Starts with</string>
    <string name="ends">Ends with</string>
    <string name="prot_read">May be read</string>
    <string name="prot_write">May be written</string>
    <string name="prot_exec">May be executed</string>
</resources>