<?xml version="1.0" encoding="utf-8"?>
<android.fix.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:paddingLeft="6dp" android:paddingRight="6dp" android:layout_width="match_parent" android:layout_height="wrap_content">
    <android.fix.TextView android:textAppearance="@style/MediumText" android:layout_gravity="center_vertical" android:id="@+id/message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/filter"/>
    <android.fix.LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <android.ext.EditText android:layout_gravity="center_vertical" android:id="@+id/filter" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:inputType="text" android:imeOptions="actionGo"/>
        <android.ext.HexConverter android:layout_gravity="center_vertical" android:id="@+id/number_converter" android:layout_width="48dp" android:layout_height="48dp"/>
    </android.fix.LinearLayout>
    <android.fix.CheckBox android:textAppearance="@style/SmallText" android:layout_gravity="center_vertical" android:id="@+id/starts" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/starts"/>
    <android.fix.CheckBox android:textAppearance="@style/SmallText" android:layout_gravity="center_vertical" android:id="@+id/ends" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ends"/>
    <android.fix.CheckBox android:textAppearance="@style/SmallText" android:layout_gravity="center_vertical" android:id="@+id/external" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/keyboard_external"/>
</android.fix.LinearLayout>
