<?xml version="1.0" encoding="utf-8"?>
<android.fix.ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:paddingLeft="6dp" android:paddingRight="6dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <android.fix.LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <android.fix.CheckBox android:textAppearance="@style/SmallText" android:id="@+id/read" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/prot_read"/>
        <android.fix.CheckBox android:textAppearance="@style/SmallText" android:id="@+id/write" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/prot_write"/>
        <android.fix.CheckBox android:textAppearance="@style/SmallText" android:id="@+id/exec" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/prot_exec"/>
        <android.fix.TextView android:textAppearance="@style/SmallText" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/address"/>
        <android.fix.LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <android.ext.EditText android:layout_gravity="center_vertical" android:id="@+id/memory_from" android:layout_width="0dp" android:layout_height="wrap_content" android:text="0" android:layout_weight="1" android:imeOptions="actionNext"/>
            <android.ext.RegionList android:layout_gravity="center_vertical" android:id="@+id/region_from" android:layout_width="48dp" android:layout_height="48dp"/>
        </android.fix.LinearLayout>
    </android.fix.LinearLayout>
</android.fix.ScrollView>
